--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Authors@R: c(
         ),
         person("Martin", "Morgan", role = "ctb"),
         person("Wolfgang", "Huber", role = "ctb"),
-        person("Bioconductor Package", role = "cre",
+        person("Bioconductor Package Maintainer", role = "cre",
             email = "maintainer@bioconductor.org")
         )
 Imports: bookdown, knitr (>= 1.30), rmarkdown (>= 1.2), stats, utils, yaml,
